ngmodel has been added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<div style="text-align:center"><!--The content below is only a placeholder and can be replaced.-->
+<div style="text-align:center">
   <h1>
-    Welcome to the  {{ title }}!
+    Welcome to the  Quotes!
   </h1>
-<app-form></app-form>
+  
+<div class="container">
+
+<app-quote-form></app-quote-form>
 </div>
