--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,17 @@
 <div style="text-align:center">
+  <div class="jumbotron">
   <h1>
     Welcome to the  Quotes!
   </h1>
-  
-<div class="container">
-
-<app-quote-form></app-quote-form>
 </div>
+<br>
+<div class="container" class="bing">
+<div *ngFor='let quote of quotes' >
+<h3>{{quote.name}}</h3>
+<h3>{{quote.quote}}</h3>
+<h3>{{quote.date}}</h3>
+</div>
+
+</div>
+<br>
+<app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
