--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div style="text-align:center">
-  <div class="jumbotron">
+  <div class="jumbotron jumbotron-top">
   <h1>
     Welcome to the  Quotes!
   </h1>
@@ -14,4 +14,5 @@
 
 </div>
 <br>
+
 <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
