--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,6 +1,10 @@
 <button  class="btn btn-success"(click)='quoteInfo()'>Add Quote</button>
+<br>
+<br>
 <div *ngIf="showQuote">
+  <div class="container" class="header">
 <h2>Quote form</h2>
+</div>
 
 <div class="container-fluid" class="jumbotron">
   <form (ngSubmit)='submitQuote()'>
