Added a delete button that confirms if user is to delete and deletes quote

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 <h3>{{quote.name}}</h3>
 <h3>{{quote.quote}}</h3>
 <h3>{{quote.date}}</h3>
-<button class="btn btn-success" (click)= 'quoteDelete(true)' >Delete Quote</button>
+<button class="btn btn-success" (click)= 'quoteDelete()' >Delete Quote</button>
 <hr>
 </div>
 
